src/widgets/snapshots/strotui__widgets__text__tests__text.snap
---
source: src/widgets/text.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 13, height: 1 },
    content: [
        "Hello, world!",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
